Use java.lang.Integer.valueOf() rather than constructor
Removes warnings in openjdk17 compilation.

<https://stackoverflow.com/questions/47095474/the-constructors-integerint-doubledouble-longlong-and-so-on-are-deprecat>
claims that openjdk9 onwards caches small Integers.